--- a/src/styling/GlobalStyles.styles.css
+++ b/src/styling/GlobalStyles.styles.css
@@ -6,6 +6,7 @@ html {
 body {
   margin: 0;
   background-color: var(--color-background);
+  min-height: -webkit-fill-available;
 }
 
 [hidden] {
